example/lib/src/l10n/errors/app_pl.arb
{
  "@@locale": "pl",
  "error": "Wystąpił błąd",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Wystąpił nieoczekiwany błąd",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Zgłoszenie błędu zostało pomyślnie wysłane",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}